--- a/resources/lakefed_ingest_copy.yml
+++ b/resources/lakefed_ingest_copy.yml
@@ -1,7 +1,7 @@
 resources:
   jobs:
-    lakefed_ingest:
-      name: "lakefed_ingest"
+    lakefed_ingest_copy:
+      name: "lakefed_ingest_copy"
       max_concurrent_runs: 32
       tasks:
         - task_key: get_task
@@ -34,7 +34,7 @@ resources:
             right: incremental
         - task_key: copy_data
           depends_on:
-            - task_key: if_partitioned_copy
+            - task_key: if_incremental
               outcome: "false"
           notebook_task:
             notebook_path: ../src/lakefed_ingest/copy_data.ipynb
@@ -91,31 +91,7 @@ resources:
               source: WORKSPACE
             warehouse_id: ${var.warehouse_id}
             parameters:
-              watermark_col_end_value: "{{tasks.get_new_watermark.output.first_row.watermark}}"
-        - task_key: if_partitioned_copy
-          depends_on:
-            - task_key: if_incremental
-              outcome: "false"
-          condition_task:
-            op: EQUAL_TO
-            left: "{{tasks.get_task.output.first_row.load_partitioned}}"
-            right: "true"
-        - task_key: copy_data_partitioned
-          depends_on:
-            - task_key: if_partitioned_copy
-              outcome: "true"
-          run_job_task:
-            job_id: ${resources.jobs.lakefed_ingest_partitioned.id}
-            job_parameters:
-              src_type: "{{tasks.get_task.output.first_row.src_type}}"
-              src_catalog: "{{tasks.get_task.output.first_row.src_catalog}}"
-              src_schema: "{{tasks.get_task.output.first_row.src_schema}}"
-              src_table: "{{tasks.get_task.output.first_row.src_table}}"
-              partition_col: "{{tasks.get_task.output.first_row.partition_col}}"
-              partition_size_mb: "{{tasks.get_task.output.first_row.partition_size_mb}}"
-              tgt_catalog: "{{tasks.get_task.output.first_row.sink_catalog}}"
-              tgt_schema: "{{tasks.get_task.output.first_row.sink_schema}}"
-              tgt_table: "{{tasks.get_task.output.first_row.sink_table}}"    
+              watermark_col_end_value: "{{tasks.get_new_watermark.output.first_row.watermark}}"   
       tags:
         workload: lakefed_ingest
       queue:
