--- a/databricks.yml
+++ b/databricks.yml
@@ -6,48 +6,46 @@ bundle:
 include:
   - resources/*.yml
 
+# Variable declarations. These variables are assigned in the dev/prod targets below.
 variables:
   cluster_id:
     description: Lookup ID of an existing cluster
-    lookup:
-      cluster: "Field Eng Shared UC LTS Cluster"
   warehouse_id:
     description: Lookup ID of an existing warehouse
-    lookup:
-      warehouse: "lakefed_ingest"
   concurrency:
-    description: Default concurrency of for each tasks. Can be overridden during deployment.
-    default: 16
+    description: Concurrency of for each tasks. Can be overridden during deployment.
 
 targets:
-  # The 'dev' target, for development purposes. This target is the default.
   dev:
-    # We use 'mode: development' to indicate this is a personal development copy:
+    # The default target uses 'mode: development' to create a development copy.
     # - Deployed resources get prefixed with '[dev my_user_name]'
-    # - Any job schedules and triggers are paused by default
-    # - The 'development' mode is used for Delta Live Tables pipelines
+    # - Any job schedules and triggers are paused by default.
+    # See also https://docs.databricks.com/dev-tools/bundles/deployment-modes.html.
     mode: development
     default: true
     workspace:
       host: https://e2-demo-field-eng.cloud.databricks.com
+    variables:
+      cluster_id:
+        lookup:
+          cluster: "Field Eng Shared UC LTS Cluster"
+      warehouse_id:
+        lookup:
+          warehouse: "Shared Serverless"
+      concurrency: 16
 
-  ## Optionally, there could be a 'staging' target here.
-  ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/ci-cd.html.)
-  staging:
-    workspace:
-      host: workspace_host
-
-  # The 'prod' target, used for production deployment.
   prod:
-    # We use 'mode: production' to indicate this is a production deployment.
-    # Doing so enables strict verification of the settings below.
     mode: production
     workspace:
-      host: workspace_host
-      # We always use /Users/chris.koester@databricks.com for all resources to make sure we only have a single copy.
+      host: https://e2-demo-field-eng.cloud.databricks.com
+      # Use fixed location to make sure we only have a single copy.
       # If this path results in an error, please make sure you have a recent version of the CLI installed.
-      root_path: /Users/chris.koester@databricks.com/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Workspace/${bundle.name}
     run_as:
-      # This runs as chris.koester@databricks.com in production. We could also use a service principal here,
-      # see https://docs.databricks.com/dev-tools/bundles/permissions.html.
+      # Using a service principal is recommended
+      # See https://docs.databricks.com/dev-tools/bundles/permissions.html
       user_name: chris.koester@databricks.com
+    variables:
+      cluster_id: 0709-132523-cnhxf2p6
+      warehouse_id: 4b9b953939869799
+      concurrency: 32
