--- a/resources/lakefed_ingest_copy.yml
+++ b/resources/lakefed_ingest_copy.yml
@@ -22,6 +22,7 @@ resources:
               tgt_catalog: "{{tasks.get_task.output.first_row.sink_catalog}}"
               tgt_schema: "{{tasks.get_task.output.first_row.sink_schema}}"
               tgt_table: "{{tasks.get_task.output.first_row.sink_table}}"
+              enable_iceberg_reads: "{{tasks.get_task.output.first_row.enable_iceberg_reads}}"
               sink_cluster_cols: "{{tasks.get_task.output.first_row.sink_cluster_cols}}"
             source: WORKSPACE
             warehouse_id: ${var.warehouse_id}
