--- a/resources/lakefed_ingest_copy_partitioned_lvl2.yml
+++ b/resources/lakefed_ingest_copy_partitioned_lvl2.yml
@@ -49,3 +49,5 @@ resources:
           default: ""
         - name: src_table
           default: ""
+        - name: select_list
+          default: "*"
