Handle Invalid Characters in Source Tables (#11)

--- a/databricks.yml
+++ b/databricks.yml
@@ -32,7 +32,7 @@ targets:
           cluster: "Field Eng Shared UC LTS Cluster"
       warehouse_id:
         lookup:
-          warehouse: "Shared Endpoint"
+          warehouse: "Serverless Warehouse"
       concurrency: 16
 
   prod:
